--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
     <!-- nothing is complete without ponies -->
     <!-- hehehe -->
-    <script>var jankyscroll=function(){"use strict";function n(){var n=Math.round(Math.random());return 1==n?-1:1}function o(){return(5*Math.random()+8)/10}return function(r,t){function i(){a&&clearTimeout(a),a=setTimeout(function(){window.scrollBy(0,t*o()*n())},400)}r=r||400,t=t||20;var e,a,c=function(){var i=Math.floor(window.scrollY/r);e!==i&&(window.scrollBy(0,t*o()*n()),e=i)};window.addEventListener("scroll",c,!1),window.addEventListener("resize",i,!1)}}();jankyscroll(25,400);</script>
+    <script>//var jankyscroll=function(){"use strict";function n(){var n=Math.round(Math.random());return 1==n?-1:1}function o(){return(5*Math.random()+8)/10}return function(r,t){function i(){a&&clearTimeout(a),a=setTimeout(function(){window.scrollBy(0,t*o()*n())},400)}r=r||400,t=t||20;var e,a,c=function(){var i=Math.floor(window.scrollY/r);e!==i&&(window.scrollBy(0,t*o()*n()),e=i)};window.addEventListener("scroll",c,!1),window.addEventListener("resize",i,!1)}}();jankyscroll(25,400);</script>
     <script type="text/javascript" src="https://panzi.github.io/Browser-Ponies/basecfg.js" id="browser-ponies-config"></script><script type="text/javascript" src="https://panzi.github.io/Browser-Ponies/browserponies.js" id="browser-ponies-script"></script><script type="text/javascript">/* <![CDATA[ */ (function (cfg) {BrowserPonies.setBaseUrl(cfg.baseurl);BrowserPonies.loadConfig(BrowserPoniesBaseConfig);BrowserPonies.loadConfig(cfg);})({"baseurl":"https://panzi.github.io/Browser-Ponies/","fadeDuration":500,"volume":1,"fps":25,"speed":3,"audioEnabled":false,"dontSpeak":true,"showFps":false,"showLoadProgress":false,"speakProbability":0.1,"spawn":{"applejack":1,"fluttershy":1,"pinkie pie":1,"rainbow dash":1,"rarity":1,"twilight sparkle":1},"autostart":true}); /* ]]> */</script>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/smore-inc/clippy.js/8bfd1f92c725c6bc3a435d538a77c3302b327c08/build/clippy.css" />
@@ -133,6 +133,42 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
     <!-- Intro Header -->
     <header class="intro">
+      <style>
+        @keyframes bounce {
+          0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+          40% {transform: translateY(-20px);}
+          60% {transform: translateY(-10px);}
+        }
+        .bouncing {
+          animation-name: bounce;
+          animation-duration: 1.1s;
+          animation-fill-mode: both;
+          animation-iteration-count: infinite;
+          transition: 0.3s;
+          display: block;
+          width: 50%;
+          position: absolute;
+          left: 50px;
+          top: 260px;
+          font-family: Helvetica, Arial, sans-serif;
+          font-size: 6em;
+          line-height: 1em;
+          color: #f44242;
+          font-weight: bolder;
+          text-align: left;
+          background: #f4df42;
+          padding: 20px;
+          z-index: 99999;
+        }
+        .bouncing:hover {
+          color: #f4df42;
+          background: #f44242;
+          padding: 30px;
+          width: 55%;
+          left: 40px;
+        }
+      </style>
+      <span class="bouncing">COMMUNISM<br>WILL WIN</span>
         <img class="ad-malder" src="img/malder.gif" alt="The Truth Is Out There" />
         <img class="ad-dance" src="img/dance.gif" />
         <div class="intro-body">
