--- a/main.html
+++ b/main.html
@@ -168,7 +168,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
           left: 40px;
         }
       </style>
-      <span class="bouncing">COMMUNISM<br>WILL WIN</span>
+      <span class="bouncing">OPEN SOURCE<br>WILL WIN</span>
         <img class="ad-malder" src="img/malder.gif" alt="The Truth Is Out There" />
         <img class="ad-dance" src="img/dance.gif" />
         <div class="intro-body">
