--- a/main.html
+++ b/main.html
@@ -177,7 +177,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP FTW</h1>
                         <div id="last-contributor"></div>
-                        <div class="shadow"> <h3>WTF Certified Technician</h3></div>
+                        <div class="shadow"> <h3>WTF Certified Technician of DOOOOOM!</h3></div>
 						                        <div style="text-align: center; margin: auto"><object type="application/x-shockwave-flash" style="width:480px; height:360px;" data="http://www.youtube.com/v/gNHs7RI3XUM?color1=FF00FF&amp;color2=FF66FF&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;showsearch=0&amp;showinfo=0&amp;controls=0&amp;version=3">
                             <param name="movie" value="http://www.youtube.com/v/gNHs7RI3XUM?color1=FF00FF&amp;color2=FF66FF&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;showsearch=0&amp;showinfo=0&amp;controls=0&amp;version=3" />
                             <param name="allowFullScreen" value="true" />
