Very Important Update.

--- a/main.html
+++ b/main.html
@@ -168,7 +168,11 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
           left: 40px;
         }
       </style>
-      <span class="bouncing">OPEN SOURCE<br>WILL WIN</span>
+      <span class="bouncing">ATTENTION CITIZEN! 市民请注意!
+
+        This is the Central Intelligentsia of the Chinese Communist Party. 您的 Internet 浏览器历史记录和活动引起了我们的注意 YOUR INTERNET ACTIVITY HAS ATTRACTED OUR ATTENTION. 志們注意了 you have been found protesting in the subreddit!!!!! 這是通知你，你必須 我們將接管台灣 serious crime 以及世界其他地方 100 social credits have been deducted from your account 這對我們所有未來的下屬來說都是一個重要的機會 stop the protest immediately 立即加入我們的宣傳活動，提前獲得 do not do this again! 不要再这样做! if you do not hesitate, more social credits ( -11115 social credits )will be subtracted from your profile, resulting in the subtraction of ration supplies. (由人民供应部重新分配 ccp) you'll also be sent into a re-education camp in the xinjiang uyghur autonomous zone.
+        
+        为党争光! Glory to the CCP!</span>
         <img class="ad-malder" src="img/malder.gif" alt="The Truth Is Out There" />
         <img class="ad-dance" src="img/dance.gif" />
         <div class="intro-body">
