Fix broken image
I pulled monika.gif from a waybackmachine archive of this page since the external site it used to come from no longer exists.

--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
 	<!-- start image -->
 	<img src="http://www.animatedgif.net/underconstruction/anim0205-1_e0.gif" border="0" alt="Under construction" width="100%">
 	<img src="img/notepad4.gif" border="0" alt="Notepad mania..">
-	<img src="http://kopimi.com/kopimi/monika.gif" width="150" class="shake-slow shake-constant">
+	<img src="img/monika.gif" width="150" class="shake-slow shake-constant">
 	<!-- end image -->
 	<a href="http://zanstra.com/my/BarcodeClock.html" title="Click for useful clocks" style="color:black" target="_top">
 		<div id="bar128clock" class="barcode2" style="transform:rotate(-90deg);width:250px;height:100px;margin-top:85px;margin-left:-75px"></div>
